samples/_failures_safe/1761270988_d80a28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38e816d4.c:186:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  186 | void graph_res
      | ^~~~
